--- a/compute/mvr/resource/main_window.ui
+++ b/compute/mvr/resource/main_window.ui
@@ -71,6 +71,7 @@
     <addaction name="actionDownsampling"/>
     <addaction name="actionDataCut"/>
     <addaction name="actionExtractImages"/>
+    <addaction name="actionExtractPoints"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuRendering"/>
@@ -209,6 +210,11 @@
   <action name="actionDownsampling">
    <property name="text">
     <string>Downsampling</string>
+   </property>
+  </action>
+  <action name="actionExtractPoints">
+   <property name="text">
+    <string>Extract Points</string>
    </property>
   </action>
  </widget>
